src/style.css
/* ... */
@media (max-width: 990px) {
  .testimonials article > div {
    justify-content: center;
  }
}

/*                About                */
.about article {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: var(--fontSec);
  padding: 5% 0;
}

.about article .text {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.about article .text > p {
  font-family: var(--fontSec);
  font-size: 24px;
  color: var(--mai);
}

.about article .main h1 {
  font-family: var(--fontMain);
  font-size: 64px;
  color: var(--second);
  font-weight: 500;
  margin: 0;
}

.about article .main h2 {
  color: var(--main);
  font-family: var(--fontMain);
  font-weight: 700;
  font-size: 40px;
  margin: -15px 0 0 0;
}

.about article .images {
  display: flex;
  padding-top: 15%;
}

.about article .image-container {
  width: 262px;
  height: 355px;
  overflow: hidden;
  border-radius: 16px;
  -webkit-border-radius: 16px;
  -moz-border-radius: 16px;
  -ms-border-radius: 16px;
  -o-border-radius: 16px;
  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
}

.about article .images img {
  width: 100%;
  transform: scale(2.2) translate(-15%, 25%);
  -webkit-transform: scale(2.2) translate(-15%, 25%);
  -moz-transform: scale(2.2) translate(-15%, 25%);
  -ms-transform: scale(2.2) translate(-15%, 25%);
  -o-transform: scale(2.2) translate(-15%, 25%);
}

.about article .image-container:last-child {
  transform: translateY(-30%);
  -webkit-transform: translateY(-30%);
  -moz-transform: translateY(-30%);
  -ms-transform: translateY(-30%);
  -o-transform: translateY(-30%);
}

.about article .image-container:first-child {
  transform: translateX(30%);
  -webkit-transform: translateX(30%);
  -moz-transform: translateX(30%);
  -ms-transform: translateX(30%);
  -o-transform: translateX(30%);
}

@media (max-width: 1020px) {
  .about article {
    padding: 30px 20px;
    flex-flow: column-reverse wrap;
    gap: 50px;
  }
  .about article .images {
    padding-top: 20%;
  }
}

@media (max-width: 570px) {
  .about article .image-container:last-child {
    display: none;
    padding: 30px 20px;
  }
  .about article .image-container:first-child {
    transform: translate(0);
    -webkit-transform: translate(0);
    -moz-transform: translate(0);
    -ms-transform: translate(0);
    -o-transform: translate(0);
    width: 100%;
  }
  .about article .image-container:first-child img {
    width: 200%;
    transform: translate(-40%, -20%) scale(1);
    -webkit-transform: translate(-40%, -20%) scale(1);
    -moz-transform: translate(-40%, -20%) scale(1);
    -ms-transform: translate(-40%, -20%) scale(1);
    -o-transform: translate(-40%, -20%) scale(1);
  }
}

@media (max-width: 415px) {
  .about article .image-container:first-child {
    transform: translate(0);
    -webkit-transform: translate(0);
    -moz-transform: translate(0);
    -ms-transform: translate(0);
    -o-transform: translate(0);
    height: fit-content;
  }
  .about article .image-container:first-child img {
    transform: translate(-45%, -10%) scale(1.3);
    -webkit-transform: translate(-45%, -10%) scale(1.3);
    -moz-transform: translate(-45%, -10%) scale(1.3);
    -ms-transform: translate(-45%, -10%) scale(1.3);
    -o-transform: translate(-45%, -10%) scale(1.3);
  }
  .about article .main h1 {
    font-size: 3em;
  }
  .about article .main h2 {
    font-size: 2em;
  }
  .about article .text p {
    font-size: 1.3em;
  }
}

/*              Scroll to top              */
.scroll-top {
  font-size: 1.5em;
  background-color: white;
  color: var(--main);
  padding: 5px 10px;
  border: 2px solid var(--main);
  position: fixed;
  bottom: 50px;
  right: 40px;
  height: fit-content;
  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.25);
  cursor: pointer;
}

/*                  Footer               */
footer {
  background-color: var(--main);
  color: white;
}

footer .container {
  display: flex;
  justify-content: space-between;
  gap: 3em;
  font-family: var(--fontSec);
  font-size: 20px;
  padding-top: 70px;
  padding-bottom: 70px;
}

footer img {
  height: 229px;
  width: 140px;
}

footer ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 0.2em;
}

footer .container div p {
  font-weight: bold;
}

footer ul li a {
  color: white;
  text-decoration: none;
  transition: 0.3s;
  -webkit-transition: 0.3s;
  -moz-transition: 0.3s;
  -ms-transition: 0.3s;
  -o-transition: 0.3s;
}

footer ul li a:hover {
  color: var(--second);
}

@media (max-width: 910px) {
  footer .container {
    flex-wrap: wrap;
    align-items: center;
    padding: 50px 30px;
  }
  footer .container > * {
    flex-basis: 40%;
  }
}

@media (max-width: 820px) {
  .hero-section article,
  footer .container {
    padding: 20px 0 20px 20px;
  }
}

@media (max-width: 403px) {
  footer .container {
    flex-wrap: wrap;
    align-items: center;
    padding: 50px 20px;
  }
  footer .container > * {
    flex: 1;
    justify-content: center;
    align-items: center;
  }
}

